# lama_utilities

./: README.md
common/: package.xml
common/src/: place_profile_conversions.cpp  place_profile_utils.cpp
crossing_detector/: CHANGELOG.rst  CMakeLists.txt  help.txt  package.xml  setup.py
crossing_detector/cmake/: FindUbuntuFlavor.cmake
crossing_detector/include/crossing_detector/: costmap_crossing_detector.h  crossing_detector.h  laser_crossing_detector.h  wrapper_utils.h
crossing_detector/src/: costmap_crossing_detector.cpp  crossing_detector.cpp  crossing_detector_server.cpp  crossing_detector_wrapper.cpp  laser_crossing_detector.cpp  laser_crossing_detector_server.cpp  laser_crossing_detector_wrapper.cpp
crossing_detector/src/crossing_detector/: __init__.py  crossing_detector_wrapper_py.py  laser_crossing_detector_wrapper_py.py  wrapper.py
crossing_detector/srv/: DetectCrossing.srv  LaserDetectCrossing.srv
crossing_detector/test/: testdata-1.txt  utest.cpp  utest.test
crossing_detector/tests/: debug_plots.py
dfs_explorer/: CHANGELOG.rst  CMakeLists.txt  package.xml
dfs_explorer/scripts/: explorer.py  graph.py  graph_transformer.py
goto_crossing/: CHANGELOG.rst  CMakeLists.txt  package.xml
goto_crossing/include/goto_crossing/: crossing_goer.h
goto_crossing/src/: crossing_goer.cpp  goto_crossing_node.cpp
lama_common/: .CHANGELOG.rst.swp  CHANGELOG.rst  CMakeLists.txt  package.xml
lama_common/include/lama_common/: angular_point.h  crossing_utils.h  crossing_visualization.h  frontier.h  is_sorted.h  place_profile_conversions.h  place_profile_utils.h  point.h  polygon.h  polygon_utils.h
lama_common/src/: crossing_utils.cpp  crossing_visualization.cpp  place_profile_conversions.cpp  place_profile_utils.cpp  polygon_utils.cpp
lama_common/test/: utest.cpp
lama_interfaces/: CMakeLists.txt  package.xml  setup.py
lama_interfaces/action/: Learn.action  Localize.action  Navigate.action
lama_interfaces/include/lama_interfaces/: CDescriptor.h  CLMIIntegralInvariant.h  CLMIPolygon.h  CLMIZernikeMoments.h  CPolygonDescriptor.h  jockey.h  lama_core.h  lama_executor.h  lama_lib.h  lama_utils.h  learning_jockey.h  localizing_jockey.h  navigating_jockey.h
lama_interfaces/msg/: DescriptorLink.msg  LamaDescriptorIdentifier.msg  LamaObject.msg  LamaObjectIdentifier.msg  MapAction.msg  complex.msg
lama_interfaces/scripts/: descriptor_interface.py  map_node.py  random_walker.py  test_core_interface.py
lama_interfaces/src/: CLMIIntegralInvariant.cpp  CLMIPolygon.cpp  CLMIZernikeMoments.cpp  jockey.cpp  lama_core.cpp  lama_executor.cpp  lama_utils.cpp  learning_jockey.cpp  lmi_defaults.cpp  localizing_jockey.cpp  navigating_jockey.cpp
lama_interfaces/src/lama_interfaces/: abstract_db_interface.py  cleartext_interface_factory.py  core_interface.py  db_interface.py  graph_builder.py  interface_factory.py
lama_interfaces/srv/: ActOnMap.srv  AddInterface.srv  GetDouble.srv  GetLamaObject.srv  GetPolygon.srv  GetVectorDouble.srv  GetVectorLaserScan.srv  GetVectorOdometry.srv  GetVectorPose.srv  SetDouble.srv  SetPolygon.srv  SetVectorDouble.srv  SetVectorLaserScan.srv  SetVectorOdometry.srv  SetVectorPose.srv  lmi_core.srv  lmi_core_get.srv  lmi_core_set.srv  lmi_dummy_descriptor_get.srv  lmi_dummy_descriptor_set.srv  lmi_laser_descriptor_get.srv  lmi_laser_descriptor_set.srv  lmi_polygon_get.srv  lmi_vector_double_get.srv  lmi_vector_double_set.srv  lmi_vector_pose_get.srv  lmi_vector_pose_set.srv  lmi_zernike_moments_get.srv  lmi_zernike_moments_set.srv
lama_interfaces/test/: test_core.launch  test_lama_core.py  test_lama_interfaces.py  utest.cpp
lama_jockeys/: CMakeLists.txt  package.xml
lama_jockeys/action/: Learn.action  Localize.action  Navigate.action
lama_jockeys/src/: jockey.cpp  learning_jockey.cpp  localizing_jockey.cpp  navigating_jockey.cpp
lama_jockeys/template/: jockey_header.h
lama_msgs/: CMakeLists.txt  package.xml
lama_msgs/include/lama_msgs/: crossing_utils.h  crossing_visualization.h  place_profile_conversions.h  place_profile_utils.h
lama_msgs/msg/: Crossing.msg  Frontier.msg  PlaceProfile.msg  Profile.msg
lama_msgs/src/: crossing_utils.cpp  place_profile_conversions.cpp  place_profile_utils.cpp  place_profile_wrapper.cpp
lama_msgs/srv/: GetCrossing.srv  GetPlaceProfile.srv  SetCrossing.srv  SetPlaceProfile.srv
lama_msgs/test/: corridor130a-1.txt  utest.cpp
lama_test/: CMakeLists.txt  package.xml
lama_test/launch/: gazebo.launch  nj_costmap_stage-official.launch  nj_costmap_stage.launch  nj_laser_stage.launch  robot.rviz  rviz.launch  test_anj_featurenav-follow.launch  test_anj_featurenav-learn.launch  test_dfs_explorer.launch  test_goto_crossing.launch  test_nj_costmap.launch  test_nj_laser.launch  test_nj_oa_costmap.launch  test_nj_oa_laser.launch
lama_test/params/: nj_costmap-costmap_2d.yaml  nj_costmap-gmapping.yaml
local_map/: CHANGELOG.rst  CMakeLists.txt  package.xml
local_map/include/local_map/: map_builder.h  map_ray_caster.h  map_utils.h
local_map/src/: local_map.cpp  local_map_node.cpp  map_builder.cpp  map_ray_caster.cpp
local_map/srv/: SaveMap.srv
local_map/test/: utest.cpp
local_map/tests/: CMakeLists.txt  updatepointoccupancy.cpp
map_ray_caster/: CHANGELOG.rst  CMakeLists.txt  package.xml
map_ray_caster/include/map_ray_caster/: map_ray_caster.h  ray_caster_utils.h
map_ray_caster/src/: map_ray_caster.cpp
nj_escape_crossing/: CHANGELOG.rst  CMakeLists.txt  package.xml
nj_escape_crossing/include/nj_escape_crossing/: crossing_escaper.h
nj_escape_crossing/src/: crossing_escaper.cpp  nj_escape_crossing_node.cpp
nlj_dummy/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
nlj_dummy/include/nlj_dummy/: lj_dummy.h  nj_dummy.h
nlj_dummy/launch/: random_walk.launch
nlj_dummy/scripts/: random_walker.py
nlj_dummy/src/: lj_dummy.cpp  nj_dummy.cpp  nlj_dummy_node.cpp
nlj_dummy/srv/: GetDummyDescriptor.srv  SetDummyDescriptor.srv
nlj_dummy/test/: nlj_dummy.test  nlj_dummy_interfaces.test  test_nlj_dummy.launch  test_nlj_dummy.py
snd/: CMakeLists.txt  README.md  package.xml
(+42 files in other folders)
