<?xml version="1.0"?>
<package>
  <name>dfs_explorer</name>
  <version>0.1.1</version>
  <description>An explorer with depth-first search for finite worlds for the Large Maps Framework (LaMa).</description>

  <maintainer email="gael.ecorchard@ciirc.cvut.cz">Gaël Ecorchard</maintainer>


  <license>BSD</license>


  <url type="website">http://wiki.ros.org/dfs_explorer</url>
  <url type="repository">https://github.com/lama-imr/lama_utilities.git</url>
  <url type="bugtracker">https://github.com/lama-imr/lama_utilities/issues</url>


  <author email="gael.ecorchard@ciirc.cvut.cz">Gaël Ecorchard</author>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>lama_interfaces</build_depend>

  <run_depend>lama_interfaces</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>actionlib</run_depend>


  <export>
  </export>
</package>
