<?xml version="1.0" encoding="UTF-8" ?>
<package format="2">
  <name>dfs_explorer</name>
  <version>0.1.8</version>
  <description>An explorer with depth-first search for finite worlds for the Large Maps Framework (LaMa).</description>

  <maintainer email="gael.ecorchard@ciirc.cvut.cz">Gaël Ecorchard</maintainer>


  <license>BSD</license>


  <url type="website">http://wiki.ros.org/dfs_explorer</url>
  <url type="repository">https://github.com/lama-imr/lama_utilities.git</url>
  <url type="bugtracker">https://github.com/lama-imr/lama_utilities/issues</url>


  <author email="gael.ecorchard@ciirc.cvut.cz">Gaël Ecorchard</author>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>actionlib</depend>
  <depend>geometry_msgs</depend>
  <depend>lama_interfaces</depend>
  <depend>rospy</depend>


  <export>
  </export>
</package>
